force-app/main/default/objects/ProviderSchoolSubjects__c/ProviderSchoolSubjects__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Approved Subjects</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Approved Subjects</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>