force-app/main/default/objects/ProviderSchoolSubjects__c/fields/ProviderSchool__c.field-meta.xml
<CustomField>
    <fullName>ProviderSchool__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Provider / School</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Provider_School_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>