force-app/main/default/objects/ProviderSchoolSubjects__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipName>Provider_School_Subjects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>