force-app/main/default/objects/ProviderSchoolSubjects__c/fields/SubjectDescription__c.field-meta.xml
<CustomField>
    <fullName>SubjectDescription__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <formula>IF(
Subject__r.Description__c = &quot;&quot;, 
Subject__r.Name , 
Subject__r.Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Description</label>
    <type>Text</type>
</CustomField>