force-app/main/default/objects/ProviderSchoolSubjects__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <formula>TEXT(Subject__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>